data/Java/11-access-non-static-variable/1/[M]Error.txt
https://stackoverflow.com/questions/4226734/non-static-variable-name-cannot-be-referenced-from-a-static-context
Program.java:13: error: non-static variable name cannot be referenced from a static context
        System.out.println("Name of the singer is "+name);
                                                    ^